# farmwise

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  farmbase_play.ipynb  main.py  openai_play.ipynb  playground.ipynb  pyproject.toml  sqlalchemy_play.ipynb  tmp.sh
apps/farmbase/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/farmbase-workflows/: Dockerfile  pyproject.toml
apps/farmbase-workflows/src/farmbase_workflows/: main.py  schedules.py  settings.py  workers.py
apps/farmbase-workflows/src/farmbase_workflows/alert/: activities.py  run_worker.py  run_workflow.py
apps/farmbase-workflows/src/farmbase_workflows/crop_cycle/: __init__.py  run_workflow.py  schema.py  worker.py  workflows.py
apps/farmbase-workflows/src/farmbase_workflows/cropcycle/: run_worker.py  run_workflow.py  shared.py  workflows.py
apps/farmbase-workflows/src/farmbase_workflows/pest_alert/: __init__.py  activities.py  run_workflow.py  schedule.py  schema.py  worker.py  workflows.py
apps/farmbase-workflows/src/farmbase_workflows/weather/: __init__.py  activities.py  run_worker.py  run_workflow.py  schedule.py  schema.py  shared.py  templates.py  worker.py  workflows.py
apps/farmbase-workflows/src/farmbase_workflows/whatsapp/: activities.py
apps/farmbase/data/gaez/: gaez.ipynb
apps/farmbase/data/gaez/GAEZ4_symbology_files/: GAEZv4 Styles.stylx
apps/farmbase/data/kalro/db.sproutopencontent.com/: kenya-crop-calendar-from-fao.xls
apps/farmbase/data/maize/: maize.csv  maize.ipynb
apps/farmbase/data/scripts/: gemini_variety_research.py
apps/farmbase/src/farmbase/: __init__.py  alembic.ini  api.py  assets.py  assoc_text.py  auth.py  cli.py  config.py  crud.py  enums.py  exceptions.py  extensions.py  initial_data.py  logging.py  main.py  models.py  utils.py  validators.py
apps/farmbase/src/farmbase/agronomy/: __init__.py  models.py  schemas.py  service.py  views.py
apps/farmbase/src/farmbase/alembic/: env.py
apps/farmbase/src/farmbase/api/: main.py
apps/farmbase/src/farmbase/api2/: deps.py  main.py
apps/farmbase/src/farmbase/auth/: __init__.py  filterset.py  models.py  permissions.py  service.py  views.py
apps/farmbase/src/farmbase/chatstate/: models.py  views.py
apps/farmbase/src/farmbase/commodity/: models.py  schemas.py  service.py  views.py
apps/farmbase/src/farmbase/common/: managers.py
apps/farmbase/src/farmbase/contact/: filterset.py  flows.py  models.py  schemas.py  service.py  views.py
apps/farmbase/src/farmbase/core/: config.py  db.py  security.py
apps/farmbase/src/farmbase/database/: core.py  enums.py  logging.py  manage.py  service.py
apps/farmbase/src/farmbase/exceptions/: exceptions.py  handlers.py
apps/farmbase/src/farmbase/farm/: filterset.py  models.py  service.py  views.py
apps/farmbase/src/farmbase/farmer/: flows.py  models.py  service.py  views.py
apps/farmbase/src/farmbase/geospatial/: models.py
apps/farmbase/src/farmbase/market/: models.py  schemas.py  service.py  views.py
apps/farmbase/src/farmbase/marketplace/: models.py
apps/farmbase/src/farmbase/messages/: models.py  service.py  views.py
apps/farmbase/src/farmbase/organization/: filterset.py  models.py  service.py  views.py
apps/farmbase/src/farmbase/plugin/: models.py  service.py  views.py
apps/farmbase/src/farmbase/products/: filterset.py  models.py  service.py
apps/farmbase/src/farmbase/project/: filterset.py  flows.py  models.py  service.py  views.py
apps/farmbase/src/farmbase/runresult/: models.py  views.py
apps/farmbase/src/farmbase/static/: README.md
apps/farmbase/src/farmbase/topic/: models.py  schemas.py  service.py  views.py
apps/farmbase/src/farmbase/weather/: activities.py  create_schedule.py  run_worker.py  run_workflow.py  shared.py  start_schedule.py  workflows.py
apps/farmbase/src/farmbase/whatsapp/: activities.py  shared.py
apps/farmbase/src/farmbase/workflow/: views.py
apps/farmbase/test/: test_contacts.http  test_farm.http  test_main.http  test_market_snapshot.http  test_memories.http  test_note.http  test_users.http
apps/farmwise/: Dockerfile  pyproject.toml
apps/farmwise-streamlit/: pyproject.toml
apps/farmwise-streamlit/src/farmwise_streamlit/: streamlit_app.py
apps/farmwise-whatsapp/: pyproject.toml
apps/farmwise-whatsapp/src/farmwise_whatsapp/: __init__.py  app.py  flow.py  sign_up.py  test.py  utils.py
apps/farmwise-whatsapp/src/farmwise_whatsapp/core/: config.py
apps/farmwise/src/farmwise/: agents.py  app.py  audio.py  context.py  database.py  dependencies.py  farmbase.py  hooks.py  items.py  main.py  repl.py  run_service.py  schema.py  service.py  settings.py  storage.py  stream.py  tools.py  utils.py  voice.py
apps/farmwise/src/farmwise/agent/: __init__.py  crop_pathogen_diagnosis_agent.py  crop_suitability_agent.py  field_registration_agent.py  handoff_filters.py  maize_variety_selector.py  market_price_agent.py  onboarding_agent.py  prompt_utils.py  soil_advisory_agent.py  triage_agent.py
apps/farmwise/src/farmwise/agents/: __init__.py  agents.py  chatbot.py  crop_pathogen_diagnosis_agent.py  crop_suitability_agent.py  field_registration_agent.py  handoff_filters.py  llama_guard.py  maize_variety_selector.py  onboarding_agent.py  tools.py  (+2 more)
libs/farmbase-agent-toolkit/: pyproject.toml
libs/farmbase-agent-toolkit/src/farmbase_agent_toolkit/: api.py  configuration.py  functions.py  prompts.py  schema.py  schema_generator.py  tools.py
libs/farmbase-client/: gen-client-config.yaml  gen-client.sh  pyproject.toml
libs/farmbase-client/src/farmbase_client/: __init__.py
libs/farmbase-client/templates/: endpoint_module.py.jinja
libs/farmbase-client/templates/property_templates/: model_property.py.jinja
libs/farmwise-client/: pyproject.toml
libs/farmwise-client/src/farmwise_client/: client.py
libs/farmwise-schema/: pyproject.toml
libs/farmwise-schema/src/farmwise_schema/: schema.py
libs/isdasoil-api-client/: README.md  isdasoil_play.ipynb  pyproject.toml
libs/isdasoil-api-client/src/isdasoil_api_client/: __init__.py
(+762 files in other folders)
