[project]
name = "farmbase-workflows"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "temporalio>=1.11.1",
]

[dependency-groups]
dev = [
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]


[tool.uv.sources]
farmbase = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
