[project]
name = "farmbase-workflows"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"

dependencies = [
    "farmbase",
    "geoalchemy2>=0.17.1",
    "loguru>=0.7.3",
    "more-itertools>=10.6.0",
    "openai>=1.95.0",
    "pydantic-extra-types>=2.10.4",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-weather>=2.0.7",
    "pywa",
    "sqlalchemy[asyncio]>=2.0.39",
    "temporalio>=1.11.1",
]

[dependency-groups]
dev = [
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]


[tool.uv.sources]
farmbase = { workspace = true }
pywa = { git = "https://github.com/david-lev/pywa.git", branch = "templates-v2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
