[project]
name = "farmbase"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.8",
    "geoalchemy2>=0.17.1",
    "geojson-pydantic>=1.2.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "phonenumbers>=9.0.4",
    "propelauth-fastapi>=4.2.8",
    "psycopg2-binary>=2.9.10",
    "pydantic-extra-types>=2.10.4",
    "pydantic-settings>=2.6.1",
    "python-slugify>=8.0.4",
    "python-weather>=2.0.7",
    "rioxarray>=0.19.0",
    "slowapi>=0.1.9",
    "sqlalchemy-filterset>=2.3.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio]>=2.0.39",
    "tabulate>=0.9.0",
    "xarray>=2025.6.1",
    "babel>=2.17.0",
    "gcsfs>=2025.5.1",
    "shapely>=2.1.1",
    "mem0ai>=0.1.111",
    "async-lru>=2.0.4",
]

[dependency-groups]
dev = [
    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
    "yappi>=1.6.10",
    "alembic-postgresql-enum>=1.7.0",
    "alembic>=1.15.1",
]

[project.entry-points."farmbase.plugins"]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
