[project]
name = "farmwise-streamlit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
        "farmwise-client",
    "streamlit>=1.43.0",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
farmwise-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
