[project]
name = "farmwise-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Nuttall-Smith" }
]
requires-python = ">=3.13"
dependencies = [
    "pywa[cryptography,fastapi]>=2.7.0",
]

[project.scripts]
farmwise-whatsapp = "farmwise_whatsapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
