[project]
name = "farmwise-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Nuttall-Smith" }
]
requires-python = "<=3.13"
dependencies = [
    "farmwise-client",
    "pywa[cryptography,fastapi]>=2.10.0",
]

[project.scripts]
farmwise-whatsapp = "farmwise_whatsapp:main"

[tool.uv.sources]
farmwise-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
