[project]
name = "farmwise"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "babel>=2.17.0",
    "farmbase-agent-toolkit",
    "loguru-logging-intercept>=0.1.5",
    "openai>=1.77.0",
    "openai-agents>=0.0.14",
    "pydub>=0.25.1",
    "pywa[cryptography,fastapi]>=2.10.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
farmbase-agent-toolkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
