[project]
name = "farmwise"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "farmbase-client",
    "google-cloud-texttospeech>=2.27.0",
    "loguru-logging-intercept>=0.1.5",
    "openai>=1.77.0",
    "openai-agents[voice]>=0.0.19",
    "pydub>=0.25.1",
    "pywa[cryptography,fastapi]>=2.10.0",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
farmbase-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
