[project]
name = "farmwise"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<=3.13"
dependencies = [
    "farmbase-client",
    "isdasoil-api-client",
    "google-cloud-storage>=3.1.1",
    "google-cloud-texttospeech>=2.27.0",
    "loguru-logging-intercept>=0.1.5",
    "openai>=1.95.0",
    "openai-agents[voice]>=0.1.0",
    "pydub>=0.25.1",
    "pywa[cryptography,fastapi]>=3.0.0",
    "upstash-redis>=1.4.0",
    "google-api-python-client>=2.176.0",
    "gql[httpx]>=4.0.0",
    "zep-cloud>=3.4.3",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
farmbase-client = { workspace = true }
isdasoil-api-client = { workspace = true }
pywa = { git = "https://github.com/david-lev/pywa.git", branch = "templates-v2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
farmwise-agents = "farmwise.repl:main"
