[project]
name = "farmbase-agent-toolkit"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docstring-parser>=0.16",
    "farmbase-client",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv.sources]
farmbase-client = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
