[project]
name = "farmbase-client"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #    "postmodern-greeter",
    "geojson-pydantic>=1.2.0",
]

[dependency-groups]
dev = [
#    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

#[tool.uv.sources]
#postmodern-greeter = { workspace = true }
#


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
